[package]
name = "rust_geck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.1"
futures = "0.3.30"
handlebars = "6.0.0"
log = "0.4.22"
reqwest = "0.12.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
simplelog = "0.12.2"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
